objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_External_Key__c</fullName>
        <description>This Field used as a external id for data loading</description>
        <externalId>true</externalId>
        <label>Account External Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <label>Account Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to get related User</description>
        <inlineHelpText>This is for an associated user field</inlineHelpText>
        <label>Associated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <description>This is for entering Branch Code.</description>
        <inlineHelpText>It Is a Branch Code field.</inlineHelpText>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Limit__c</fullName>
        <label>Current Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Outstanding__c</fullName>
        <description>This will check how much amout left to order</description>
        <formula>Enhance_Limit__c - Total_Outstanding_Order_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Disc_Group__c</fullName>
        <description>This field is used to map discount and query from Discount Mapping object</description>
        <inlineHelpText>This is a Customer Discount Group</inlineHelpText>
        <label>Customer Disc. Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Posting_Group__c</fullName>
        <description>This field is used for Customer Posting Group</description>
        <inlineHelpText>It is a Customer Posting Group Field</inlineHelpText>
        <label>Customer Posting Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>This is for enhance limit</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This is used for entering Email address</description>
        <inlineHelpText>It is an Email Address field</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(Start_Date__c),
        ISBLANK(Duration__c)
    ),
    NULL,
    Start_Date__c + Duration__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>On this date Enhance limit will end and it reset to previous limit</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enhance_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enhance Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST_Customer_Type__c</fullName>
        <description>This field is for entering what type of GST Customer</description>
        <inlineHelpText>It is a GST Customer Type field</inlineHelpText>
        <label>GST Customer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Registration_No__c</fullName>
        <description>Here will be entered a combination of code of GST Registration No</description>
        <inlineHelpText>it is for entering GST Registration No</inlineHelpText>
        <label>GST Registration No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GST_Registration_Type__c</fullName>
        <description>Here will be entered what is the type of GST Registration?</description>
        <inlineHelpText>It is for entering GST Registration Type</inlineHelpText>
        <label>GST Registration Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Bus_Posting_Group__c</fullName>
        <description>General Business Posting Group is assigned for assigning this group to customers</description>
        <inlineHelpText>It is a General Business posting Group Field</inlineHelpText>
        <label>Gen. Bus. Posting Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History__c</fullName>
        <label>History</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identity_No__c</fullName>
        <description>This field is used for identification</description>
        <inlineHelpText>It is an Identity No field for identification</inlineHelpText>
        <label>Identity No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Type__c</fullName>
        <description>What type of Identitification will be entered here.</description>
        <inlineHelpText>It is used for type of identification</inlineHelpText>
        <label>Identity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <description>Here Geographic Location Code will be entered for Location</description>
        <inlineHelpText>it is for entering Location Code</inlineHelpText>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <description>This will be used for entering Mobile No</description>
        <inlineHelpText>It is a mobile no field</inlineHelpText>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P_A_N_No__c</fullName>
        <description>This field will be used for entering a unique 10 digit alphanumeric number.</description>
        <inlineHelpText>It is used for entering PAN no.</inlineHelpText>
        <label>P.A.N. No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Code__c</fullName>
        <description>This field is used for entering 2 digit code that indicates cash discount and due date information.</description>
        <inlineHelpText>It is a Payment Terms Code field.</inlineHelpText>
        <label>Payment Terms Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Distributor_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is for the new enhanced limit</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Structure__c</fullName>
        <description>This field is used for entering business structure of a company.</description>
        <inlineHelpText>It is used for entering Business structure</inlineHelpText>
        <label>Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Order_Value_U__c</fullName>
        <label>Total Outstanding Order Value (U)</label>
        <summarizedField>Ori_Plast_Order__c.Remaining_Total_Order_Item_Value__c</summarizedField>
        <summaryForeignKey>Ori_Plast_Order__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Order_Value__c</fullName>
        <description>Calculated price of all related orders which are either not fully delivered or cancelled.</description>
        <inlineHelpText>Calculated price of all related orders which are either not fully delivered or cancelled.</inlineHelpText>
        <label>Total Outstanding Order Value</label>
        <summarizedField>Ori_Plast_Order__c.Outstanding_Order_Value__c</summarizedField>
        <summaryForeignKey>Ori_Plast_Order__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>This field is used for entering a region or area for particuar purpose</description>
        <inlineHelpText>It is used for entering Zone</inlineHelpText>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>